# matrix

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  todo.tasks
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  api.rst  conf.py
matrix/: __init__.py  constant.py  diagonal.py  kronecker.py  lowrank.py  matrix.py  promote.py  shape.py  tiledblocks.py  triangular.py  util.py  woodbury.py
matrix/ops/: __init__.py  abs.py  add.py  block.py  block_diag.py  broadcast_batch_to.py  broadcast_to.py  cast.py  cholesky.py  cholesky_solve.py  concat.py  dense.py  diag.py  diag_extract.py  divide.py  dtype.py  eye.py  fill_diag.py  inv.py  iqf.py  iqf_diag.py  isabstract.py  isnan.py  kron.py  logdet.py  matmul.py  matmul_diag.py  mean.py  multiply.py  negative.py  one.py  ones.py  pd_inv.py  pd_schur.py  power.py  rank.py  ratio.py  reshape.py  root.py  sample.py  (+23 more)
tests/: test_cases.py  test_constant.py  test_diagonal.py  test_kronecker.py  test_lowrank.py  test_matrix.py  test_promote.py  test_shape.py  test_tiledblocks.py  test_triangular.py  test_util.py  test_woodbury.py  util.py
tests/ops/: test_abs.py  test_add.py  test_block.py  test_block_diag.py  test_broadcast_batch_to.py  test_broadcast_to.py  test_cast.py  test_cholesky.py  test_cholesky_solve.py  test_concat.py  test_dense.py  test_diag.py  test_divide.py  test_dtype.py  test_eye.py  test_fill_diag.py  test_inv.py  test_iqf.py  test_iqf_diag.py  test_isabstract.py  test_isnan.py  test_kron.py  test_logdet.py  test_matmul.py  test_matmul_diag.py  (+30 more)
(+1 files in other folders)
