[metadata]
name = backends-matrix
version = 0.1.0
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = Structured matrices
url = https://github.com/wesselb/matrix
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown
